--- a/businesses.html
+++ b/businesses.html
@@ -27,63 +27,39 @@
           <ul>
             <li>
               <a href="about.html">
-                About Us
+                Tentang Kami
               </a>
-              <ul>
-                <li>
-                  <a href="about.html">
-                    Company Profile
-                  </a>
-                </li>
-                <li>
-                  <a href="vision-mission.html">
-                    Vision & Mission
-                  </a>
-                </li>
-                <li>
-                  <a href="bod.html">
-                    Board of Directors
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="businesses.html">
-                Our Businesses
+                Bisnis Kami
               </a>
             </li>
             <li>
               <a href="projects.html">
-                Our Projects
+                Proyek Kami
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="csr.html">
                 CSR
               </a>
-              <ul>
-                <li>
-                  <a href="csr.html">
-                   CSR Program
-                  </a>
-                </li>
-                <li>
-                  <a href="csr-activities.html">
-                    CSR Activities
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="gallery.html">
-                Gallery
+                Galeri
               </a>
             </li>
             <li>
               <a href="contact.html">
-                Contact Us
+                Karir
               </a>
-            </li> 
+            </li>
+            <li>
+                <a href="contact.html">
+                  Kontak Kami
+                </a>
+              </li>
           </ul>
         </div>
         <div class="col-lg-1 lang-ansaf d-none d-lg-block">
@@ -187,10 +163,10 @@
       </div>
     </div>
 </div>
-    <div class="container-fluid bus-top">
+    <div class="container-fluid bus-white">
       <div class="row">
         <div class="col-lg-12 pl-0">
-          <img class="elements" src="images/segitiga-biru-kanan-04.png" alt="">
+          <img class="elements" src="images/segitiga-biru-kanan-half-05.png" alt="">
           <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
                 <img class="mt-3 mt-lg-2" src="images/line-gray-11.png" alt="">
@@ -204,140 +180,106 @@
         </div>
       </div>
     </div> 
-    <div class="container-fluid bus-mid">
-      <div class="row first-section">
-        <div class="col-lg-12" data-aos="fade-up" data-aos-offset="300">
-          <h3 class="text-white my-4 d-none d-lg-block">
-            PT Ansaf Inti Resources
-          </h3>
-          <h3 class="text-white my-4 d-lg-none">
-            PT Ansaf<br>
-            Inti Resources
-          </h3>
-          <p class="text-white brief">
-            PT Ansaf Inti Resources (AIR) merupakan perusahaan yang bergerak dibidang pertambangan yang beroperasi di provinsi
-            Kalimantan Timur. Perusahaan yang berdiri pada 22 juli 2011 memulai usahanya sebagai perusahaan yang bergerak di coal
-            trading company. Pada tahun 2014 PT Ansaf Inti Resources memulai usaha lain sebagai perusahaan jasa pertambangan.
-            Sedangkan pada tahun 2018 PT Ansaf Inti Resources mengembangkan usaha lain dibidang layanan port & jetty batu bara
-            sehingga sampai saat ini PT Ansaf Inti Resources memiliki 5 bisnis utama dibidang pertambangan yang disebut Ansaf Mining,
-            Ansaf Services, Ansaf Logistic, Ansaf Trading dan Ansaf Rent.
-          </p>
-        </div>
-      </div>
-      <div class="row thumbnail-bus bg-light-gray">
-        <div class="col-lg-6 item order-lg-1 order-2">
-          <div class="content-wrapper d-flex" data-aos="fade-right">
-            <div class="d-none d-lg-inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
+    <div class="container-fluid csr-tab bg-light-gray">
+      <div class="row">
+        <div class="col-lg-12 px-0">
+          <!-- Nav tabs -->
+          <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
+            <li class="col px-0">
+              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Kontrak Penambangan</a>
+            </li>
+            <li class="col px-0">
+              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Anak Perusahaan dan Perusahaan Terkait</a>
+            </li>
+          </ul>
+          <!-- Tab panes -->
+          <div class="tab-content">
+            <div class="tab-pane py-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0" data-aos="fade-up">
+                  <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
+                </div>
+                <div class="col-lg-5 col-12 details" data-aos="fade-right">
+                  <p class="text-gray brief-details">
+                    Bisnis utama Ansaf adalah menyediakan jasa pertambangan, dalam bentuk pemindahan lapisan penutup, ekstraksi batubara, transportasi ke stock pile untuk pengiriman lebih lanjut. 
+
+Guna memenuhi kebutuhan customer, dalam waktu singkat, Ansaf mampu menggalang tenaga kerja berkualitas serta alat produksi yang tepat untuk melaksanakan kegiatan penambangan batubara.
+                  </p>
+                </div>
+              </div>
             </div>
-            <div class="inline-block pl-lg-4">
-                <a href="business-mining.html">
-                <h2 class="text-dark-blue mb-lg-4 mb-3">
-                  Ansaf Mining
-                </h2>
-                </a>
-                <p class="text-gray font-roboto mb-lg-3 mb-5 details">
-                  Seiring dengan pengalaman dalam bidang Usaha
-                  Jasa Penambangan batubara maka PT. Ansaf Inti
-                  Resources mulai melakukan pengembangan usaha
-                  untuk mengelola IUP di Embalut dan Batuah dan
-                  melakukan diversifikasi usaha ke bidang lain...
-                </p>
-                <a href="business-mining.html" class="link-gray-border my-lg-3 d-inline-block">
-                  SELENGKAPNYA
-                </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-2 order-1">
-          <a href="business-mining.html">
-            <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-02.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-3 order-3">
-          <a href="business-services.html">
-            <img data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-03.jpg" alt="">
-          </a>
-        </div>
-        <div class="col-lg-6 item  order-lg-4 order-4">
-          <div  data-aos="fade-right" class="content-wrapper d-flex">
-            <div class="d-none d-lg-inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
-            </div>
-            <div class="inline-block pl-lg-4">
-                <a href="business-services.html">
-                  <h2 class="text-dark-blue mb-lg-4 mb-3">
-                    Ansaf Services
-                  </h2>
-                </a>
-                <p class="text-gray font-roboto mb-lg-3 mb-5 details">
-                  Semenjak berdirinya di tahun 2014 sebagai perusahaan penyedia jasa pertambangan, Ansaf telah melayani serangkaian layanan kontrak pertambangan diberbagai perusahaan. Kita menangani perencanaan tambang, pengangkutan lapisan tanah penutup...
-                </p>
-                <a href="business-services.html" class="link-gray-border my-lg-3 d-inline-block">
-                  SELENGKAPNYA
-                </a>
-            </div>
-          </div>
-        </div>
-        <div class="col-lg-6 item  order-lg-5 order-6">
-          <div  data-aos="fade-right" class="content-wrapper d-flex">
-            <div class="d-none d-lg-inline-block">
-                <img class="w-auto mt-lg-3" src="images/line-gray-11.png" alt="">
-            </div>
-            <div class="inline-block pl-lg-4">
-                <a href="business-logistic.html">
-                  <h2 class="text-dark-blue mb-lg-4 mb-3">
-                    Ansaf Logistic
-                  </h2>
-                </a>
-                <p class="text-gray font-roboto  mb-lg-3 mb-5 details">
-                  Sejak tahun 2018, PT Ansaf Inti Resources berupaya melakukan diversifikasi usaha dengan menjajaki usaha dibidang support logistik bagi kegiatan coal barging. Saat ini terdapat 2 perusahaan yang bergerak dibidang support coal barging...
-                </p>
-                <a href="business-logistic.html" class="link-gray-border my-lg-3 d-inline-block">
-                  SELENGKAPNYA
-                </a>
+            <div class="tab-pane py-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+              <div class="d-lg-flex pt-5 mt-lg-5">
+                <div class="col-lg-7 col-12 pl-lg-0">
+                  <img class="img-fluid" src="images/csr-program-tab-content-08.jpg" alt="">
+                </div>
+                <div class="col-lg-5 col-12 details">
+                  <p class="text-gray brief-details">
+                    Bersama mitra-mitra yang handal Ansaf membangun kerjasama menyediakan berbagai pelayanan yang dibutuhkan dalam bisnis penambangan batubara.
+                  </p>
+                </div>
+              </div>
+              <div class="container py-lg-5">
+                <div class="row">
+                  <div class="col-lg-3 text-center">
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-psm-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Palaran Sinergi Mas
+                      </h6>
+                    </a>
+                  </div>
+                  <div class="col-lg-3 text-center">
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-esp-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Embalut Sinergi Mas
+                      </h6>
+                    </a>
+                  </div>
+                  <div class="col-lg-3 text-center">
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-red-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Ghani Raya Mandiri
+                      </h6>
+                    </a>
+                  </div>
+                  <div class="col-lg-3 text-center">
+                    <a href="#" data-toggle="modal" data-target="#exampleModal">
+                      <img class="img-fluid" src="images/logo-bisnis-mount-05.png" alt="">
+                    </a>
+                    <a class="text-dark" href="#" data-toggle="modal" data-target="#exampleModal">
+                      <h6>
+                        PT Batuan Alam Persada
+                      </h6>
+                    </a>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="col-lg-6 p-lg-0 px-5 pt-5  order-lg-6 order-5">
-          <a href="business-logistic.html">
-            <img  data-aos="fade-down" class="img-fluid w-100" src="images/bus-thumb-item-04.jpg" alt="">
-          </a>
-        </div>
-      </div>
-      <div class="row bus-client text-center">
-        <div class="col-lg-12 my-lg-5">
-          <h3  data-aos="fade-up" class="text-dark-blue">
-            Our Subsidiaries
-          </h3>
-        </div>
-        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 offset-lg-2 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-05.png" alt="">
-        </div>
-        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-06.png" alt="">
-        </div>
-        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-07.png" alt="">
-        </div>
-        <div  data-aos="fade-down" class="col-lg-2 col-6 p-lg-0 p-5 mt-lg-5">
-          <img class="img-fluid " src="images/bus-logo-08.png" alt="">
         </div>
       </div>
     </div>
-    <div class="container-fluid footer-content">
-      <div class="row text-center">
+    <div class="container-fluid py-lg-5">
+      <div class="row text-center mt-lg-5">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Masih ada pertanyaan?
+                Apa yang ingin ditanyakan?
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
-                Masih ada<br>
-                pertanyaan?
+                Apa yang ingin ditanyakan?
               </h4>
           </div>
       </div>
-      <div class="row">
+      <div class="row mb-lg-5">
           <div class="container">
               <div class="row text-center mb-lg-0 mb-5">
                   <div class="col-lg-12 pb-lg-0 pb-5">
@@ -358,17 +300,17 @@
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
-              Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-              Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              Kuningan Jakarta 12950
+              Kantor Taman E.3.3 Unit B5<br>
+              Jl. Dr. Ide Anak Agung Gde Agung, Kuningan Timur,<br>
+              Setiabudi, Jakarta Selatan 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
-             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
+             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> +62 21 5764 388-89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
-              Fax (0541) 261 532
+             info@ansaf.co.id
           </p>
       </div>
       <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
@@ -382,6 +324,33 @@
               <i class="fab fa-youtube"></i> Ansaf Indonesia
           </a>
       </div>
+  </div>
+</div>
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog modal-gallery" role="document">
+    <div class="modal-content">
+      <div class="modal-body">
+        <div class="row">
+          <div class="col-lg-7 pr-lg-0">
+                <img class="w-100" src="images/gallery-thumbnail-content-03.jpg" alt="">
+          </div>
+          <div class="col-lg-5 pl-lg-0 bg-white pt-lg-4 pr-lg-4">
+            <img class="float-right" data-dismiss="modal"  src="images/close-icon-orange-03.png" alt="">
+            <div class="content-wrapper d-flex">
+              <div class="inline-block pl-lg-4">
+                <img src="images/logo-bisnis-mount-05.png" alt="">
+                  <p class="text-gray">
+                    PT Palaran Sinergi Mas bergerak dalam bidang jasa pengelolaan pelabuhan batubara di Palaran, berupa stock pile seluas 32 hektar yang dapat menampung 250.000 mt batubara disamping menyediakan konveyor dengan kapasitas hingga 1.000 mt/jam.
+                    <br><br>
+Di bawah pengawasan tenaga ahli di bidang jasa pelabuhan batubara, PSM menyediakan jasa pelabuhan berkualitas sesuai kebutuhan pelanggan, mulai dari pengangkutan, penghalusaan dan pencampuran sehingga siap dikapalkan.
+                  </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </div>
 <div class="container-fluid footer bg-dark-blue">
