--- a/csr.html
+++ b/csr.html
@@ -27,63 +27,39 @@
           <ul>
             <li>
               <a href="about.html">
-                About Us
+                Tentang Kami
               </a>
-              <ul>
-                <li>
-                  <a href="about.html">
-                    Company Profile
-                  </a>
-                </li>
-                <li>
-                  <a href="vision-mission.html">
-                    Vision & Mission
-                  </a>
-                </li>
-                <li>
-                  <a href="bod.html">
-                    Board of Directors
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="businesses.html">
-                Our Businesses
+                Bisnis Kami
               </a>
             </li>
             <li>
               <a href="projects.html">
-                Our Projects
+                Proyek Kami
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="csr.html">
                 CSR
               </a>
-              <ul>
-                <li>
-                  <a href="csr.html">
-                   CSR Program
-                  </a>
-                </li>
-                <li>
-                  <a href="csr-activities.html">
-                    CSR Activities
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="gallery.html">
-                Gallery
+                Galeri
               </a>
             </li>
             <li>
               <a href="contact.html">
-                Contact Us
+                Karir
               </a>
-            </li> 
+            </li>
+            <li>
+                <a href="contact.html">
+                  Kontak Kami
+                </a>
+              </li>
           </ul>
         </div>
         <div class="col-lg-1 lang-ansaf d-none d-lg-block">
@@ -207,96 +183,73 @@
     <div class="container-fluid csr-mid bg-dark-blue">
       <div class="row">
         <div class="col-lg-12 px-0">
-          <img data-aos="fade-up" class="content-mid d-none d-lg-block" src="images/csr-mid-first-section-07.png" alt="">
+          <img data-aos="fade-up" class="content-mid d-none d-lg-block" src="images/csr-new-images-content-top-04.png" alt="">
           <img data-aos="fade-up" class="content-mid d-lg-none" src="images/csr-mid-first-section-mobile-07.jpg" alt="">
           <div class="content-wrapper d-flex">
             <div class="inline-block pl-lg-5 offset-lg-1" data-aos="fade-right">
-                <h2 class="text-white mb-lg-4">
-                  Tulisan Pembuka
-                </h2>
                 <p class="text-white brief">
-                  Tanggung Jawab Sosial Perusahaan bukan hanya sekedar
-                  kewajiban. Bagi kami, tanggung jawab sosial melekat dengan
-                  operasi kami di manapun. Ibarat 2 sisi uang logam. Penerapan
-                  tanggung jawab sosial perusahaan yang kami lakukan dimulai
-                  dari hulu melalui peran serta karyawan.
+                  ANSAF menyadari makna CSR sebagai sarana membangun<br>
+                  hubungan sosial dengan masyarakat sekitar proyek yang<br>
+                  pelaksanaannya harus tepat sasaran dan membawa manfaat<br>
+                  berkelanjutan.<br>
+                  <br>
+                  Penerapan kebijakan ini ditekankan pada upaya membangun<br>
+                  hubungan yang saling memahami dengan nilai silaturrahim,<br>
+                  ketulusan serta kejujuran.
                 </p>
             </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="container-fluid csr-tab">
+    <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-12 px-0">
-          <!-- Nav tabs -->
-          <ul class="nav nav-tabs text-center" id="myTab" role="tablist">
-            <li class="col px-0">
-              <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home" aria-selected="true">Ansaf Peduli</a>
-            </li>
-            <li class="col px-0">
-              <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab" aria-controls="profile" aria-selected="false">Ansaf Sehat</a>
-            </li>
-          </ul>
-          <!-- Tab panes -->
-          <div class="tab-content">
-            <div class="tab-pane pt-lg-5 active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <div class="d-lg-flex pt-5 mt-lg-5">
-                <div class="col-lg-7 col-12 pl-lg-0" data-aos="fade-up">
-                  <img class="img-fluid" src="images/csr-program-tab-content-07.jpg" alt="">
-                </div>
-                <div class="col-lg-5 col-12 details" data-aos="fade-right">
-                  <h4 class="text-dark-blue mt-lg-0 mt-5 mb-lg-3 mb-2">
-                    Ansaf Peduli
-                  </h4>
-                  <p class="text-orange mb-4">
-                    Penghargaan dari Baznas Provinsi<br>
-                    Kalimantan Timur Tahun 2019
-                  </p>
-                  <p class="text-gray brief-details">
-                    Hal pokok yang kami terapkan adalah
-                    memberdayakan. Peduli dan saling berbagi
-                    tidak mesti dengan materi. Ketika tangan
-                    dapat menolong, kami segera lakukan. Ada
-                    sekolah atau lembaga pendidikan lain perlu
-                    pengetahuan dan peningkatan kompetensi
-                    siswa-siswa nya, kami pun tergerak untuk
-                    berbagi pengetahuan.
-                  </p>
-                </div>
-              </div>
+        <div class="col-lg-7 pl-lg-0">
+          <div class="carousel-csr owl-theme">
+            <div class="item">
+              <img src="images/csr-gallery-04.jpg" alt="">
             </div>
-            <div class="tab-pane pt-lg-5" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <div class="d-lg-flex pt-5 mt-lg-5">
-                <div class="col-lg-7 col-12 pl-lg-0">
-                  <img class="img-fluid" src="images/csr-program-tab-content-08.jpg" alt="">
-                </div>
-                <div class="col-lg-5 col-12 details">
-                  <h4 class="text-dark-blue mt-lg-0 mt-5 mb-lg-3 mb-2">
-                    Ansaf Sehat
-                  </h4>
-                  <p class="text-orange mb-4">
-                    Penghargaan dari Baznas Provinsi<br>
-                    Kalimantan Timur Tahun 2019   
-                  </p>
-                  <p class="text-gray brief-details">
-                    Hal pokok yang kami terapkan adalah
-                    memberdayakan. Peduli dan saling berbagi
-                    tidak mesti dengan materi. Ketika tangan
-                    dapat menolong, kami segera lakukan. Ada
-                    sekolah atau lembaga pendidikan lain perlu
-                    pengetahuan dan peningkatan kompetensi
-                    siswa-siswa nya, kami pun tergerak untuk
-                    berbagi pengetahuan.
-                  </p>
-                </div>
-              </div>
+            <div class="item">
+              <img src="images/csr-gallery-05.jpg" alt="">
+            </div>
+            <div class="item">
+              <img src="images/csr-gallery-06.jpg" alt="">
+            </div>
+          </div>
+        </div>
+        <div class="col-lg-5 py-lg-5 pl-lg-5">
+          <br><br><br>
+          <h2 class="text-orange mb-lg-3 mt-lg-5">
+            Instalasi Pengolahan Air
+          </h2>
+          <p class="text-gray">
+            Bekerjasama dengan Dana Peduli Umat<br>
+            mendirikan instalasi pengolahan air di Desa<br>
+            Purwajaya, Kalimantan Timur
+          </p>
+        </div>
+      </div>
+      <div class="row my-lg-5 py-lg-5">
+        <div class="col-lg-4 offset-lg-1 py-lg-5">
+          <br><br><br>
+          <h2 class="text-orange mb-lg-3 mt-lg-5">
+            Khitanan Masal
+          </h2>
+          <p class="text-gray">
+            Bekerjasama dengan Dana Peduli Umat Kaltim<br>
+            mengadakan khitanan massal bagi anak-anak
+          </p>
+        </div>
+        <div class="col-lg-7 pl-lg-0">
+          <div class="carousel-csr owl-theme">
+            <div class="item">
+              <img src="images/khitanan-masal-content-04.jpg" alt="">
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <div class="container-fluid footer-content">
+    </div>  
+    <div class="container-fluid bg-white py-lg-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
@@ -323,24 +276,24 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-5">
+  <div class="container-fluid footer-details mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
-              Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-              Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              Kuningan Jakarta 12950
+              Kantor Taman E3.3 Unit B5<br>
+              Jl Dr Ide Anak Agung Gede Agung Lot<br>
+              Kawasan Mega Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
-             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
+             <span class="text-orange">+62 21 5764 388 - 89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
-              Fax (0541) 261 532
+              info@ansaf.co.id
           </p>
       </div>
       <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
@@ -357,13 +310,13 @@
   </div>
 </div>
 <div class="container-fluid footer bg-dark-blue">
-    <div class="row">
-        <div class="col-lg-12">
-            <p class="text-white mt-3 text-center">
-                Copyright © 2020 PT Ansaf Inti Resources
-            </p>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-lg-12">
+          <p class="text-white mt-3 text-center">
+              Copyright © 2020 PT Ansaf Inti Resources
+          </p>
+      </div>
+  </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
