--- a/gallery.html
+++ b/gallery.html
@@ -27,63 +27,39 @@
           <ul>
             <li>
               <a href="about.html">
-                About Us
+                Tentang Kami
               </a>
-              <ul>
-                <li>
-                  <a href="about.html">
-                    Company Profile
-                  </a>
-                </li>
-                <li>
-                  <a href="vision-mission.html">
-                    Vision & Mission
-                  </a>
-                </li>
-                <li>
-                  <a href="bod.html">
-                    Board of Directors
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="businesses.html">
-                Our Businesses
+                Bisnis Kami
               </a>
             </li>
             <li>
               <a href="projects.html">
-                Our Projects
+                Proyek Kami
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="csr.html">
                 CSR
               </a>
-              <ul>
-                <li>
-                  <a href="csr.html">
-                   CSR Program
-                  </a>
-                </li>
-                <li>
-                  <a href="csr-activities.html">
-                    CSR Activities
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="gallery.html">
-                Gallery
+                Galeri
               </a>
             </li>
             <li>
               <a href="contact.html">
-                Contact Us
+                Karir
               </a>
-            </li> 
+            </li>
+            <li>
+                <a href="contact.html">
+                  Kontak Kami
+                </a>
+              </li> 
           </ul>
         </div>
         <div class="col-lg-1 lang-ansaf d-none d-lg-block">
@@ -207,112 +183,63 @@
     <div class="container-fluid bus-mid">
       <div class="row first-section">
         <div class="col-lg-12 text-center" data-aos="fade-up">
-          <h3 class="text-white my-lg-4">
-            Tulisan Pembuka
-          </h3>
           <p class="text-white">
-            Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod<br>
-            tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis<br>
-            nostrud exerci tation ullamcorper suscipit lobortis nisl.
+            Dengan keinginan untuk berbagi cerita dan pengalaman, kami ingin membagikan<br>
+            momen-momen kegiatan Ansaf dalam proses perkembangan dan pertumbuhan kami<br>
+            melalui galeri ini
           </p>
         </div>
       </div>
       <div class="row thumbnail-gallery mx-lg-3 mt-lg-5 text-center d-none d-lg-flex" data-aos="fade-up">
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-04.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-05.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-06.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-07.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-08.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-09.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-10.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
         </div>
         <div class="col-lg-4 my-lg-3">
           <a href="#" data-toggle="modal" data-target="#exampleModal">
-            <img class="img-fluid" src="images/gallery-thumbnail-content-03.jpg" alt="">
+            <img class="img-fluid" src="images/gallery-new-content-11.jpg" alt="">
           </a>
-          <h4 class="text-dark-blue mt-lg-4 mb-lg-2">
-            Lorem Ipsum
-          </h4>
-          <p class="text-orange">
-            Kalimantan Timur<br>
-            September 2020
-          </p>
+        </div>
+        <div class="col-lg-4 my-lg-3">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-new-content-12.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-4 my-lg-3">
+          <a href="#" data-toggle="modal" data-target="#exampleModal">
+            <img class="img-fluid" src="images/gallery-new-content-13.jpg" alt="">
+          </a>
         </div>
       </div>
       <div class="row d-lg-none my-5 mx-2" data-aos="fade-up">
@@ -504,11 +431,11 @@
         </div>
       </div>
     </div>
-    <div class="container-fluid footer-content">
+    <div class="container-fluid bg-white py-lg-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
-                Masih ada pertanyaan?
+                Tertarik dengan Kegiatan Kami?
               </h4>
               <h4 class="text-dark-blue pb-5 d-lg-none">
                 Masih ada<br>
@@ -522,32 +449,42 @@
                   <div class="col-lg-12 pb-5">
                     <a href="contact.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
-                        HUBUNGI KAMI
+                        BISNIS KAMI
                       </span> 
                    </a>
+                   <a href="contact.html" class="link-orange-border mx-lg-4">
+                    <span class="text-orange">
+                      PROYEK KAMI
+                    </span> 
+                  </a>
+                  <a href="contact.html" class="link-orange-border mx-lg-4">
+                      <span class="text-orange">
+                        CSR PROGRAM
+                      </span> 
+                    </a>
                   </div>
               </div>
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-5">
+  <div class="container-fluid footer-details mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
-              Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-              Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              Kuningan Jakarta 12950
+              Kantor Taman E3.3 Unit B5<br>
+              Jl Dr Ide Anak Agung Gede Agung Lot<br>
+              Kawasan Mega Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
-             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
+             <span class="text-orange">+62 21 5764 388 - 89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
-              Fax (0541) 261 532
+              info@ansaf.co.id
           </p>
       </div>
       <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
@@ -564,13 +501,13 @@
   </div>
 </div>
 <div class="container-fluid footer bg-dark-blue">
-    <div class="row">
-        <div class="col-lg-12">
-            <p class="text-white mt-3 text-center">
-                Copyright © 2020 PT Ansaf Inti Resources
-            </p>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-lg-12">
+          <p class="text-white mt-3 text-center">
+              Copyright © 2020 PT Ansaf Inti Resources
+          </p>
+      </div>
+  </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
