--- a/vision-mission.html
+++ b/vision-mission.html
@@ -27,63 +27,39 @@
           <ul>
             <li>
               <a href="about.html">
-                About Us
+                Tentang Kami
               </a>
-              <ul>
-                <li>
-                  <a href="about.html">
-                    Company Profile
-                  </a>
-                </li>
-                <li>
-                  <a href="vision-mission.html">
-                    Vision & Mission
-                  </a>
-                </li>
-                <li>
-                  <a href="bod.html">
-                    Board of Directors
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="businesses.html">
-                Our Businesses
+                Bisnis Kami
               </a>
             </li>
             <li>
               <a href="projects.html">
-                Our Projects
+                Proyek Kami
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="csr.html">
                 CSR
               </a>
-              <ul>
-                <li>
-                  <a href="csr.html">
-                   CSR Program
-                  </a>
-                </li>
-                <li>
-                  <a href="csr-activities.html">
-                    CSR Activities
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="gallery.html">
-                Gallery
+                Galeri
               </a>
             </li>
             <li>
               <a href="contact.html">
-                Contact Us
+                Karir
               </a>
-            </li> 
+            </li>
+            <li>
+                <a href="contact.html">
+                  Kontak Kami
+                </a>
+              </li>  
           </ul>
         </div>
         <div class="col-lg-1 lang-ansaf d-none d-lg-block">
@@ -433,24 +409,24 @@
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-5">
+  <div class="container-fluid footer-details mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
-              Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-              Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              Kuningan Jakarta 12950
+              Kantor Taman E3.3 Unit B5<br>
+              Jl Dr Ide Anak Agung Gede Agung Lot<br>
+              Kawasan Mega Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
-             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
+             <span class="text-orange">+62 21 5764 388 - 89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
-              Fax (0541) 261 532
+              info@ansaf.co.id
           </p>
       </div>
       <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
