--- a/contact.html
+++ b/contact.html
@@ -27,63 +27,39 @@
           <ul>
             <li>
               <a href="about.html">
-                About Us
+                Tentang Kami
               </a>
-              <ul>
-                <li>
-                  <a href="about.html">
-                    Company Profile
-                  </a>
-                </li>
-                <li>
-                  <a href="vision-mission.html">
-                    Vision & Mission
-                  </a>
-                </li>
-                <li>
-                  <a href="bod.html">
-                    Board of Directors
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="businesses.html">
-                Our Businesses
+                Bisnis Kami
               </a>
             </li>
             <li>
               <a href="projects.html">
-                Our Projects
+                Proyek Kami
               </a>
             </li>
             <li>
-              <a href="#">
+              <a href="csr.html">
                 CSR
               </a>
-              <ul>
-                <li>
-                  <a href="csr.html">
-                   CSR Program
-                  </a>
-                </li>
-                <li>
-                  <a href="csr-activities.html">
-                    CSR Activities
-                  </a>
-                </li>
-              </ul>
             </li>
             <li>
               <a href="gallery.html">
-                Gallery
+                Galeri
               </a>
             </li>
             <li>
               <a href="contact.html">
-                Contact Us
+                Karir
               </a>
-            </li> 
+            </li>
+            <li>
+                <a href="contact.html">
+                  Kontak Kami
+                </a>
+              </li>
           </ul>
         </div>
         <div class="col-lg-1 lang-ansaf d-none d-lg-block">
@@ -197,7 +173,7 @@
             </div>
             <div class="inline-block pl-lg-4 pl-2">
                 <h2 class="text-dark-blue">
-                  Contact Us
+                  Kontak Kami
                 </h2>
             </div>
           </div>
@@ -207,7 +183,7 @@
     <div class="container-fluid contact-mid bg-dark-blue">
       <div class="row">
         <div class="col-lg-12 px-0">
-          <img data-aos="fade-up" class="content-mid d-none d-lg-block" src="images/contact-mid-first-section-02.png" alt="">
+          <img data-aos="fade-up" class="content-mid d-none d-lg-block" src="images/contact-us-new-top-02.png" alt="">
           <img data-aos="fade-up" class="content-mid d-lg-none" src="images/contact-mid-first-section-mobile-03.jpg" alt="">
           <div class="content-wrapper d-flex" data-aos="fade-right">
             <div class="inline-block">
@@ -264,14 +240,42 @@
       </div>
       </div>
     </div>
-    <div class="container-fluid" data-aos="fade-up">
+    <div class="container-fluid bg-light-gray" data-aos="fade-up">
       <div class="row">
-        <div class="col-lg-12 px-0">
+        <div class="col-lg-4 py-lg-5 pl-lg-5">
+          <br><br>
+            <h6 class="text-orange">Head Office</h6>
+            <p class="text-gray">
+            Kantor Taman E.3.3 Unit B5<br>
+            Jl. Dr. Ide Anak Agung Gde Agung<br>
+            Kuningan Timur, Setiabudi<br>
+            Jakarta Selatan 12950<br>
+            +62 21 5764 388 - 89<br>
+            </p><br>
+            <h6 class="text-orange">
+              Samarinda Region Office
+            </h6>
+            <p class="text-gray">
+              Jl. KH. Wahid Hasyim 1 No. 26, Sempaja Selatan<br>
+              Samarinda Utara, Samarinda<br>
+              Kalimantan Timur 75119<br>
+              +62 541 260 226<br>
+            </p><br>
+            <h6 class="text-orange">
+              Lahat Region Office
+            </h6>
+            <p class="text-gray">
+              Jl. Drs. H. Sueb Tamat Blok AA RT10/03<br>
+              Bandar Jaya, Lahat, Kab. Lahat<br>
+              Sumatera Selatan 31414<br>
+            </p><br>
+        </div>
+        <div class="col-lg-8 px-0">
           <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d126908.54688582964!2d106.71306270309152!3d-6.277915696726387!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3fcf7feefe9%3A0xde61fbb431a279ea!2sPT.Ansaf%20Inti%20Resources!5e0!3m2!1sen!2sid!4v1628241313552!5m2!1sen!2sid" style="border:0;" allowfullscreen="" class="w-100" height="700"></iframe>
         </div>
       </div>
     </div>
-    <div class="container-fluid footer-content">
+    <div class="container-fluid bg-white py-lg-5">
       <div class="row text-center">
           <div class="col-lg-12">
               <h4 class="text-dark-blue pb-lg-4 d-none d-lg-block">
@@ -288,34 +292,54 @@
           <div class="container">
               <div class="row text-center">
                   <div class="col-lg-12 pb-5">
-                    <a href="contact.html" class="link-orange-border mx-lg-4">
+                  <a href="about.html" class="link-orange-border mx-lg-4">
                       <span class="text-orange">
-                        HUBUNGI KAMI
+                        TENTANG KAMI
                       </span> 
-                   </a>
+                  </a>
+                  <a href="about.html" class="link-orange-border mx-lg-4">
+                    <span class="text-orange">
+                      VISI & MISI
+                    </span> 
+                  </a>
+                  <a href="about.html" class="link-orange-border mx-lg-4">
+                  <span class="text-orange">
+                    NILAI-NILAI INTI
+                  </span> 
+                  </a>
+                  <a href="about.html" class="link-orange-border mx-lg-4">
+                    <span class="text-orange">
+                      DEWAN KOMISARIS
+                    </span> 
+                  </a>
+                  <a href="about.html" class="link-orange-border mx-lg-4">
+                    <span class="text-orange">
+                      DIREKSI
+                    </span> 
+                  </a>
                   </div>
               </div>
           </div>
       </div>
   </div>
-  <div class="container-fluid footer-details mb-5">
+  <div class="container-fluid footer-details mb-5 pt-5">
     <div class="row">
       <div class="col-lg-2">
           <img class="img-fluid text-right logo" src="images/ansaf-logo.png" alt="">
       </div>
       <div class="col-lg-4 py-lg-0 py-4">
           <p class="text-gray">
-              Kantor Taman E3.3 Unit B5 Jl Dr Ide Anak<br>
-              Agung Gede Agung Lot 8.6-8.7 Kawasan Mega<br>
-              Kuningan Jakarta 12950
+              Kantor Taman E3.3 Unit B5<br>
+              Jl Dr Ide Anak Agung Gede Agung Lot<br>
+              Kawasan Mega Kuningan Jakarta 12950
           </p>
       </div>
       <div class="col-lg-3 fax-column text-center">
           <a href="#" class="link-orange-border">
-             <span class="text-orange"><i class="fab fa-whatsapp text-orange"></i> (0541) 260 226</span> 
+             <span class="text-orange">+62 21 5764 388 - 89</span> 
           </a>
           <p class="text-gray mt-lg-3 mt-2 fax-details">
-              Fax (0541) 261 532
+              info@ansaf.co.id
           </p>
       </div>
       <div class="col-lg-2 link-socmed pl-lg-0 offset-lg-1 pt-lg-0 pt-5">
@@ -332,13 +356,13 @@
   </div>
 </div>
 <div class="container-fluid footer bg-dark-blue">
-    <div class="row">
-        <div class="col-lg-12">
-            <p class="text-white mt-3 text-center">
-                Copyright © 2020 PT Ansaf Inti Resources
-            </p>
-        </div>
-    </div>
+  <div class="row">
+      <div class="col-lg-12">
+          <p class="text-white mt-3 text-center">
+              Copyright © 2020 PT Ansaf Inti Resources
+          </p>
+      </div>
+  </div>
 </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js" integrity="sha512-bLT0Qm9VnAYZDflyKcBaQ2gg0hSYNQrJ8RilYldYQ1FxQYoCLtUjuuRuZo+fjqhx/qtq/1itJ0C2ejDxltZVFg==" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
